# SP500_Voldemort

./: .gitignore  AAPL_interactive_stock_plot.html  GOOG_interactive_stock_plot.html  README.md  best_ann_model.h5  best_lstm_model.h5  pyproject.toml  scaper.py
sp500/compile/: cleanup.py  pos.py  test_pos.csv
sp500/headlines/: app.py  crawler.py  displayer.py  scaper.py  scraper.py
sp500/sa/: analyzer.py  sa.py  sentiment.py  test.py  train_classifier.py
sp500/sa/data/: Finished_test_sa.csv  Jan_24_Jan_28_Stock_News copy.csv  Jan_24_Jan_28_Stock_News.csv  New_data.csv
sp500/sentiment_analysis/: analyzer.py  sa.py  test.py
sp500/sentiment_analysis/data/: Finished_test_sa.csv
sp500/sentiment_analysis/visualization/: create_word_cloud.py  wordcloud_in_logo.py
sp500/time_series/: best_ann_model.h5  best_lstm_model.h5  best_rnf_model.joblib  price_model.py  stock_movement.py  time-series.py  time_series.py  time_series_preprocessing.py
sp500/time_series/visualization/: AAPL_interactive_stock_plot.html  Macro_Indicators_Visualization.py  best_model_viz.py  company_profile.py  macro_indicators_viz.py  price_model_viz.py  stock_movement.py
sp500/time_series/visualization/saved_files/: best_rnf_model.joblib
sp500/visualization/: Macro_Indicators_Visualization.py  company_profile.py  create_word_cloud.py  datatypes.py  stock_visualization.py  wordcloud_in_logo.py
