[tool.poetry]
name = "SP-500"
version = "0.1.0"
description = ""
authors = ["Beichi Wu - Yolanda Yang - Sizhe Ding - Qilin Zhou"]
readme = "README.md"
packages = [{include = "SP-500"}]

[tool.poetry.dependencies]
python = "^3.8"
lxml = "^4.9.1"
requests = "^2.28.1"
ipython = "^8.7.0"
pytest = "^7.2.0"
cssselect = "^1.2.0"
pandas = "^1.5.3"
matplotlib = "^3.7.0"

[tool.poetry.scripts]
my-script = "SP50.headlines.webscraping:start"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"