[tool.poetry]
name = "sp500"
version = "0.1.0"
description = ""
authors = ["Beichi Wu - Yolanda Yang - Sizhe Ding - Qilin Zhou"]
readme = "README.md"
packages = [{include = "sp500"}]

[tool.poetry.dependencies]
python = "^3.8"
lxml = "^4.9.1"
requests = "^2.28.1"
ipython = "^8.7.0"
pytest = "^7.2.0"
cssselect = "^1.2.0"
pandas = "^1.5.3"
matplotlib = "^3.7.0"
PySimpleGUI = "^4.60.0"
en_core_web_sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1.tar.gz" }
spacytextblob = { url = "https://github.com/SamEdwardes/spacytextblob/archive/refs/tags/v4.0.0.tar.gz" }
numpy = "^1.20.2"
scikit-learn = "^1.0.2" 
yfinance = "^0.1.70"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
