[tool.poetry]
name = "sp500"
version = "0.1.0"
description = ""
authors = ["Beichi Wu - Yolanda Yang - Sizhe Ding - Qilin Zhou"]
readme = "README.md"
packages = [{include = "sp500"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
lxml = "^4.9.1"
requests = "^2.28.1"
ipython = "^8.7.0"
pytest = "^7.2.0"
cssselect = "^1.2.0"
pandas = "^1.5.3"
matplotlib = "^3.7.0"
PySimpleGUI = "^4.60.0"
en_core_web_sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1.tar.gz" }
textblob = "^0.15.3"
numpy = "^1.20.2"
wordcloud = "^1.9.3"
scikit-learn = "^1.0.2"
yfinance = "^0.2.36"
fredapi = "^0.5.1"
scikeras = "^0.12.0"
tensorflow = "2.15"
plotly = "^5.19.0"
kaleido = "0.2.1"
joblib = "^1.3.2"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
textblob-fr = "^0.2.0"
textblob-de = "^0.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
